[Fix] pagination search
